# digidog-server

./: .env.example  .gitignore  Cargo.toml  LICENSE  deploy.just  digi.md  justfile  readme.md
dockerfiles/: Containerfile
nginx/: default.conf  nginx.conf
src/: main.rs
systemd/: digidog-game-server.service  digidog-server.service
templates/: index.html
