[package]
name = "digidog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
askama = "0.14.0"
dotenvy = "0.15.7"

tower-http = { version = "0.5", features = ["fs","trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
markdown = "1.0.0"
